--- a/dissertation.bib
+++ b/dissertation.bib
@@ -6801,4 +6801,49 @@ CONCLUSIONS: Computational approaches allow us to disentangle contributions of m
   doi = {10.5281/zenodo.1294090}
 }
 
+@article{rosseel2012,
+  title = {Lavaan: {{An R Package}} for {{Structural Equation Modeling}}},
+  volume = {48},
+  url = {http://www.jstatsoft.org/v48/i02/},
+  number = {2},
+  journaltitle = {Journal of Statistical Software},
+  date = {2012},
+  pages = {1-36},
+  keywords = {_diss},
+  author = {Rosseel, Yves}
+}
+
+@incollection{akaike1998,
+  langid = {english},
+  title = {Information {{Theory}} and an {{Extension}} of the {{Maximum Likelihood Principle}}},
+  isbn = {978-1-4612-7248-9 978-1-4612-1694-0},
+  url = {https://link.springer.com/chapter/10.1007/978-1-4612-1694-0_15},
+  abstract = {In this paper it is shown that the classical maximum likelihood principle can be considered to be a method of asymptotic realization of an optimum estimate with respect to a very general information theoretic criterion. This observation shows an extension of the principle to provide answers to many practical problems of statistical model fitting.},
+  booktitle = {Selected {{Papers}} of {{Hirotugu Akaike}}},
+  series = {Springer Series in Statistics},
+  publisher = {{Springer, New York, NY}},
+  urldate = {2018-07-10},
+  date = {1998},
+  pages = {199-213},
+  keywords = {_diss},
+  author = {Akaike, Hirotogu},
+  file = {/home/jflournoy/.zotero/zotero/n9n1b2c7.default/zotero/storage/U785JG3R/978-1-4612-1694-0_15.html},
+  doi = {10.1007/978-1-4612-1694-0_15}
+}
+
+@book{gelman2014,
+  langid = {english},
+  location = {{Boca Raton, FL}},
+  title = {Bayesian {{Data Analysis}}, {{Third Edition}}},
+  edition = {3},
+  isbn = {978-1-4398-4095-5},
+  abstract = {Now in its third edition, this classic book is widely considered the leading text on Bayesian methods, lauded for its accessible, practical approach to analyzing data and solving research problems. Bayesian Data Analysis, Third Edition continues to take an applied approach to analysis using up-to-date Bayesian methods. The authors—all leaders in the statistics community—introduce basic concepts from a data-analytic perspective before presenting advanced methods. Throughout the text, numerous worked examples drawn from real applications and research emphasize the use of Bayesian inference in practice. New to the Third Edition   Four new chapters on nonparametric modeling Coverage of weakly informative priors and boundary-avoiding priors Updated discussion of cross-validation and predictive information criteria Improved convergence monitoring and effective sample size calculations for iterative simulation Presentations of Hamiltonian Monte Carlo, variational Bayes, and expectation propagation New and revised software code   The book can be used in three different ways. For undergraduate students, it introduces Bayesian inference starting from first principles. For graduate students, the text presents effective current approaches to Bayesian modeling and computation in statistics and related fields. For researchers, it provides an assortment of Bayesian methods in applied statistics. Additional materials, including data sets used in the examples, solutions to selected exercises, and software instructions, are available on the book’s web page.},
+  pagetotal = {661},
+  publisher = {{CRC Press}},
+  date = {2014},
+  keywords = {Mathematics / Probability & Statistics / General,Psychology / Research & Methodology,_diss,Computers / Mathematical & Statistical Software},
+  author = {Gelman, Andrew and Carlin, John B. and Stern, Hal S. and Dunson, David B. and Vehtari, Aki and Rubin, Donald B.},
+  eprinttype = {googlebooks}
+}
+
 
